--- a/views/analiticki_prikaz.ejs
+++ b/views/analiticki_prikaz.ejs
@@ -2,7 +2,7 @@
   <%- include("./partials/head.ejs") %>
   <body>
     <%- include("./partials/nav.ejs") %>
-<iframe src="http://neodash.graphapp.io/?share&type=file&id=%3Cscript%20src%3D%22https%3A%2F%2Fgist.github.com%2Fbujin2502%2Fdff004a9c98f8463488a6fa0a3fa4120.js%22%3E%3C%2Fscript%3E&dashboardDatabase=neo4j&credentials=neo4j%2Bs%3A%2F%2Fneo4j%3AEg7O6ak1ErjFPeCwsi-IMcQds9gWKcQDDUx8jBN9mco%40%3A36e5e105.databases.neo4j.io%3A7687&standalone=Yes" width="100%" height="800" frameborder="0"></iframe>
+<iframe src="http://neodash.graphapp.io/?share&type=database&id=d104d885-8b89-4af8-b377-f2559c869b03&dashboardDatabase=neo4j&credentials=neo4j%2Bs%3A%2F%2Fneo4j%3AEg7O6ak1ErjFPeCwsi-IMcQds9gWKcQDDUx8jBN9mco%40%3A36e5e105.databases.neo4j.io%3A7687&standalone=Yes" width="100%" height="1000" frameborder="0"></iframe>
 
     <%- include("./partials/footer.ejs") %>
   </body
